// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorView Component should match snapshot with custom message 1`] = `
<div
  class="MuiBox-root css-0"
>
  <h2
    class="MuiTypography-root MuiTypography-h2 css-zi892p-MuiTypography-root"
  >
    Network error occurred
  </h2>
</div>
`;

exports[`ErrorView Component should match snapshot with default message 1`] = `
<div
  class="MuiBox-root css-0"
>
  <h2
    class="MuiTypography-root MuiTypography-h2 css-zi892p-MuiTypography-root"
  >
    An error occurred while loading the application.
  </h2>
</div>
`;
